see that file and the CVS log for more historic information.  The
entire history of the project is available through CVS.

----------------------------------------------------------------------
--- 2007-08-XX  Release 7.11.0                                     ---
----------------------------------------------------------------------
  
* 'tree' command without args now shows e'd objects - Sean Morrison
* new pix-fb -p option to pause before exiting - Karel Kulhavy
* fixed mged 'B' command behavior with -A and no args - John Anderson
* updated bundled libpng to version 1.2.21 - Erik Greenwald
* removed raytrace image continuation code - Erik Greenwald
* new mged 'clone' command for performing deep copies of objects
	- Adam Ross, Sean Morrison, Erik Greenwald
* new mged 'tracker' object routing command - Sean Morrison
* fixed crash in mged ls -A attribute listing command - Sean Morrison
* fixed dbconcat of empty combinations, crash in mged - John Anderson


----------------------------------------------------------------------
--- 2007-07-XX  Release 7.10.3                                     ---
----------------------------------------------------------------------

* lingering framebuffer windows by default - Sean Morrison
* improved matrix readability on mged 'red' command - Karel Kulhavy
* "editor" for ted commands can be set in .mgedrc - Erik Greenwald
* fixed benchmark results computation on Solaris - Erik Greenwald
* fixed database corruption bug caused during dbconcat - John Anderson
* mirror BoT primitives - Sean Morrison
* BoT vertex selection in mged reports local units - Sean Morrison
* improved photon map irradiance progress reporting - Erik Greenwald
* tab-completion for mged - John Anderson
* fixed various issues reported by flawfinder - Erik Greenwald
* fixed photon-mapping lighting model crash - Erik Greenwald
* ADRT libtie bug fixes and performance enhancements - Justin Shumaker
* mged now tests for vim before vi for text editing - Sean Morrison